--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "@types/uuid": "^10.0.0",
     "aws-sdk": "^2.1599.0",
     "eslint": "^9.0.0",
     "express": "^4.19.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "mongodb": "^6.7.0",
+    "uuid": "^10.0.0"
   }
 }
